[package]
name = "villiamr-karpov-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
serde_json = "1.0"
tokio = { version = "1.16.1", features = ["full"] }
